# bzl-examples

android/ndk/: MODULE.bazel  WORKSPACE.bazel
android/ndk/app/src/main/: BUILD.bazel
android/tutorial/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
