package(
    default_visibility = ["//src:__subpackages__"],
)

load("@rules_android//rules:rules.bzl", "android_binary", "android_library")

android_library(
    name = "greeter_activity",
    srcs = [
        "Greeter.java",
        "MainActivity.java",
    ],
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = ["//:greeter_activity"],
)
