package(
    default_visibility = ["//src:__subpackages__"],
)

load("@rules_android//rules:rules.bzl", "android_binary", "android_library")

android_library(
    name = "greeter_activity",
    srcs = [
        "src/main/java/com/example/bazel/Greeter.java",
        "src/main/java/com/example/bazel/MainActivity.java",
    ],
    manifest = "src/main/java/com/example/bazel/AndroidManifest.xml",
    resource_files = glob(["src/main/java/com/example/bazel/res/**"]),
)

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    deps = ["//:greeter_activity"],
)
